--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -15,6 +15,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:padding="@dimen/layout_8dp"
+            android:clipToPadding="false"
             android:overScrollMode="never"/>
 
     <FrameLayout
