--- a/app/src/main/res/values/strings_app.xml
+++ b/app/src/main/res/values/strings_app.xml
@@ -38,8 +38,8 @@
 
     <!-- Notifications -->
     <string name="notification_channel_id" translatable="false">scriptum_channel_id</string>
+    <string name="notification_channel" translatable="false">Scriptum</string>
 
-    <string name="notification_channel">Notes</string>
     <string name="notification_group">Notes</string>
 
     <string name="notification_button_unbind">Unbind</string>
