--- a/iconanim/src/main/res/animator/cancel_group_exit.xml
+++ b/iconanim/src/main/res/animator/cancel_group_exit.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <objectAnimator
-            android:duration="@android:integer/config_shortAnimTime"
+            android:duration="@integer/cancel_anim_time"
             android:interpolator="@android:anim/accelerate_decelerate_interpolator"
             android:propertyName="rotation"
             android:valueFrom="135"
