--- a/iconanim/src/main/res/animator/cancel_path_enter.xml
+++ b/iconanim/src/main/res/animator/cancel_path_enter.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <objectAnimator
-            android:duration="@android:integer/config_shortAnimTime"
+            android:duration="@integer/cancel_anim_time"
             android:interpolator="@android:anim/accelerate_decelerate_interpolator"
             android:propertyName="pathData"
             android:valueFrom="M 20 11 L 7.83 11 L 13.42 5.41 L 12 4 L 5 11 L 5 11 L 4 12 L 5 13 L 5 13 L 12 20 L 13.41 18.59 L 7.83 13 L 20 13 L 20 11 L 20 11"
