--- a/app/src/main/res/anim/fade_in.xml
+++ b/app/src/main/res/anim/fade_in.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <alpha
-            android:duration="@android:integer/config_shortAnimTime"
+            android:duration="@integer/fade_anim_time"
             android:fromAlpha="0.0"
             android:interpolator="@android:anim/accelerate_decelerate_interpolator"
             android:toAlpha="1.0"/>
