--- a/app/src/main/res/values/values_app.xml
+++ b/app/src/main/res/values/values_app.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Text length -->
+    <integer name="note_name_max_length">40</integer>
+    <integer name="rank_name_max_length">30</integer>
 
-    <integer name="length_note_name">40</integer>
-    <integer name="length_rank_name">30</integer>
+    <integer name="color_column_count">4</integer>
 
-    <integer name="column_color">4</integer>
+    <integer name="fade_anim_time">@android:integer/config_shortAnimTime</integer>
 
 </resources>
