--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -8,7 +8,7 @@
         <import alias="theme" type="sgtmelon.scriptum.model.annotation.Theme"/>
 
         <variable name="currentTheme" type="int"/>
-        <variable name="noteModel" type="sgtmelon.scriptum.model.NoteModel"/>
+        <variable name="noteItem" type="sgtmelon.scriptum.model.item.NoteItem"/>
     </data>
 
     <androidx.cardview.widget.CardView
@@ -16,7 +16,7 @@
             style="@style/Card"
             app:cardCornerRadius="@dimen/radius_4dp"
             app:cardUseCompatPadding="false"
-            app:noteColor='@{noteModel.noteEntity.color}'
+            app:noteColor='@{noteItem.color}'
             tools:cardBackgroundColor="@color/note_green_light">
 
         <FrameLayout
@@ -34,19 +34,19 @@
                     <TextView
                             android:id="@+id/note_text_name_text"
                             style="@style/Text.Note.Name"
-                            android:text='@{noteModel.noteEntity.name}'
-                            android:visibility='@{noteModel.noteEntity.name.isEmpty() ? v.GONE : v.VISIBLE}'
+                            android:text='@{noteItem.name}'
+                            android:visibility='@{noteItem.name.isEmpty() ? v.GONE : v.VISIBLE}'
                             tools:text="@string/preview_note_name"/>
 
                     <TextView
                             android:id="@+id/note_text_content_text"
                             style="@style/Text.Note.Content"
-                            android:text='@{noteModel.noteEntity.text}'
+                            android:text='@{noteItem.text}'
                             tools:text="@string/preview_note_text"/>
 
                     <include
                             layout="@layout/include_item_note_info"
-                            app:noteModel='@{noteModel}'/>
+                            app:noteItem='@{noteItem}'/>
 
                 </LinearLayout>
 
@@ -54,7 +54,7 @@
                         android:id="@+id/note_text_color_view"
                         style="@style/Image.Color.Vertical.End"
                         android:contentDescription="@null"
-                        app:indicatorColor='@{noteModel.noteEntity.color}'
+                        app:indicatorColor='@{noteItem.color}'
                         app:indicatorTheme='@{currentTheme}'
                         app:visibleOn='@{theme.DARK}'
                         app:visibleTheme='@{currentTheme}'
